align ment correct

--- a/frontend web/front-end.css
+++ b/frontend web/front-end.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    padding: 5;
+    padding: 0;
 }
 a{
   text-decoration: none;
@@ -469,8 +469,8 @@ top:15px ;
       display: block;
       position: absolute;
       background-color: #3d3c3cb7;
-      margin-top: 15px;
-      margin-left: -6px;
+      margin-top: 14px;
+      margin-left: -8px;
      
      
      
